# mrmr

./: .gitignore  pyproject.toml  setup.cfg
mrmr/: bigquery.py  main.py  pandas.py  spark.py
tests/: test_bigquery.py  test_consistency.py  test_main.py  test_pandas.py  test_spark.py  utils.py
